--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
   --text-color: #ffffff;
-  --bg-url: url(./assets/bg-mobile.jpg) no-repeat top center / cover;
+  --bg-url: url(./assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.1);
   --surface-color-hover: rgba(255, 255, 255, 0.05);
@@ -16,7 +16,7 @@
 
 .light {
   --text-color: #000000;
-  --bg-url: url(./assets/bg-mobile-light.jpg) no-repeat top center / cover;
+  --bg-url: url(./assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -25,7 +25,9 @@
 }
 
 body {
-  background: var(--bg-url);
+  background: var(--bg-url) no-repeat top center/cover;
+
+  height: 100vh;
 }
 
 body * {
@@ -172,4 +174,16 @@ footer {
   text-align: center;
 
   font-size: 14px;
+}
+
+/* media queries */
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
