add animation and hover to switch

--- a/style.css
+++ b/style.css
@@ -65,11 +65,9 @@ body * {
   position: relative;
   width: 64px;
   margin: 4px auto;
-  cursor: pointer;
 }
 
 #switch button {
-  pointer-events: none;
   position: absolute;
   z-index: 1;
 
@@ -85,11 +83,16 @@ body * {
   border-radius: 50%;
 
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -185,5 +188,26 @@ footer {
 
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+
+  to {
+    left: 0;
   }
 }
